adding ratings and comments and auth

--- a/public/partials/article-template.html
+++ b/public/partials/article-template.html
@@ -1,17 +1,17 @@
  <template class="article-template" id="article-template">
     <article class="recipe-article">
         <div class="card article">
-        <h2 class="article__title"></h2>
+            <h2 class="article__title"></h2>
             <!-- Rating -->
             <div class="meta-item">
-                <p><span class="meta-text rating-stars" id="rating-stars"></span> out of <strong>X</strong> Reviews</p>  
+                <p><span class="meta-text rating-stars" id="rating-stars"></span></p>
             </div>
             <p class="author"></p>
             <p class="description summary"></p> 
-        <div class="imageElement">
-        <p class="photoInfo"></p>
-                
-        </div>
+            <div class="imageElement">
+            <p class="photoInfo"></p>
+                    
+            </div>
             <header class="article-meta">
             <div class="meta-icons">
                 <!-- Date -->
@@ -28,7 +28,7 @@
                 
                 <!-- Likes -->
                 <div class="meta-item">
-                    <p><button id="like-button" aria-pressed="false"><i class="fa fa-heart" aria-hidden="true"></i></button> Likes</p>
+                    <p><button id="like-button" aria-pressed="false"><i class="fa fa-heart" aria-hidden="true"></i></button> </p>
                     <span class="meta-text" id="like-count">0</span>
                 </div>
             </div>
