--- a/src/partials/article-template.html
+++ b/src/partials/article-template.html
@@ -1,17 +1,15 @@
  <template class="article-template" id="article-template">
     <article class="recipe-article">
         <div class="card article">
-        <h2 class="article__title"></h2>
+            <h2 class="article__title"></h2>
             <!-- Rating -->
-            <div class="meta-item">
-                <p><span class="meta-text rating-stars" id="rating-stars"></span> out of <strong>X</strong> Reviews</p>  
-            </div>
             <p class="author"></p>
+            <div id="rating-display"></div>
             <p class="description summary"></p> 
-        <div class="imageElement">
-        <p class="photoInfo"></p>
-                
-        </div>
+            <div class="imageElement">
+            <p class="photoInfo"></p>
+                    
+            </div>
             <header class="article-meta">
             <div class="meta-icons">
                 <!-- Date -->
@@ -28,7 +26,7 @@
                 
                 <!-- Likes -->
                 <div class="meta-item">
-                    <p><button id="like-button" aria-pressed="false"><i class="fa fa-heart" aria-hidden="true"></i></button> Likes</p>
+                    <p><button id="like-button" aria-pressed="false"><i class="fa fa-heart" aria-hidden="true"></i></button> </p>
                     <span class="meta-text" id="like-count">0</span>
                 </div>
             </div>
@@ -60,6 +58,8 @@
         <div class="directions-heading"><h3>Directions:</h3></div>
         <ol class="directions-list"></ol>
         </div>
+
+        <div id="community-notes"></div>
     </div>
     </article>
     </template>
