making config changes in webpack and package.json

--- a/public/partials/article-template.html
+++ b/public/partials/article-template.html
@@ -3,10 +3,8 @@
         <div class="card article">
             <h2 class="article__title"></h2>
             <!-- Rating -->
-            <div class="meta-item">
-                <p><span class="meta-text rating-stars" id="rating-stars"></span></p>
-            </div>
             <p class="author"></p>
+            <div id="rating-display"></div>
             <p class="description summary"></p> 
             <div class="imageElement">
             <p class="photoInfo"></p>
@@ -60,6 +58,8 @@
         <div class="directions-heading"><h3>Directions:</h3></div>
         <ol class="directions-list"></ol>
         </div>
+
+        <div id="community-notes"></div>
     </div>
     </article>
     </template>
